--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,18 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".PredictorWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/predictor_widget_info" />
+        </receiver>
+
     </application>
 
 </manifest>
